<resources>
    <string name="app_name">Coronavirus Info</string>
    <string name="nav_header_title">Coronavirus Info</string>
    <string name="action_information">About app</string>
    <string name="action_share">Share app</string>
    <string name="fab_dialog_transition">transition.fab</string>
    <string name="turn_on_permissions">Permissions denied</string>
    <string name="permissions_info">Please allow permissions to use this feature</string>
    <string name="btn_grant_permissions">Grant Permissions</string>
    <string name="section_under_construction">This section is yet under constructon. It will be available soon after new app version is released. Stay tuned!</string>
    <string name="number_of_infected">Confirmed cases:\n%1$d</string>
    <string name="number_of_deaths">Confirmed deaths:\n%1$d</string>
    <string name="number_of_recovered">Confirmed recovered:\n%1$d</string>
    <string name="total_of_infected">Total world cases:\n%1$d</string>
    <string name="source_label">Source: </string>

    <string name="toolbar_knowledge">Knowledge articles</string>
    <string name="toolbar_map">Map</string>
    <string name="toolbar_news">News</string>
    <string name="toolbar_announcements">Announcements</string>
    <string name="bottom_nav_knowledge">Knowledge</string>
    <string name="bottom_nav_stats">Statistics</string>
    <string name="bottom_nav_announcements">Announcements</string>
    <string name="bottom_nav_map">Contamination map</string>
    <string name="bottom_nav_news">News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_info">kontakt@coronavirusinfo.pl</string>
    <string name="share_app_text">This application has some useful information about Coronavirus: Coronavirus Info on Google Play</string>

    <string name="news_url">https://www.bbc.co.uk/search?q=coronavirus&amp;sa_f=search-product</string>

    <!--OnBoard-->
    <string name="turn_on_storage">Potrzebny jest dostęp do pamięci urządzenia</string>
    <string name="storage_explanation">Mapa zapisuje się w pamięci urządzenia</string>
    <string name="turn_on_localization">Gdzie jesteśmy?\n Włącz lokalizację!</string>
    <string name="find_my_location">Chcesz podejrzeć mapę zakażonych oraz siebie na mapie?</string>
    <string name="later">PÓŹNIEJ</string>

</resources>
