<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_knowledge"
        android:icon="@drawable/ic_descriptiona"
        android:title="@string/bottom_nav_knowledge"
        />

    <item
        android:id="@+id/navigation_tips"
        android:icon="@drawable/ic_add"
        android:title="@string/bottom_nav_announcements" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_chart"
        android:title="@string/bottom_nav_stats" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/bottom_nav_map" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_agenda"
        android:title="@string/bottom_nav_news"/>

</menu>