<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/placeholder_permissions"
    android:visibility="gone"
    android:background="@android:color/transparent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/TitleTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:text="@string/turn_on_permissions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subtitle"
        style="@style/SubTitleTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:text="@string/permissions_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_grant_permission"
        style="@style/PermissionButtonTheme"
        android:text="@string/btn_grant_permissions"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />


</androidx.constraintlayout.widget.ConstraintLayout>